[package]
name = "astra_os"
version = "0.1.0"
authors = ["Alexander DuPree <alexander.j.dupree@gmail.com>"]
edition = "2018"
description = "Experimental discovery of how to build an operating system in Rust."
license = "MIT"
readme = "README.md"
respository = "https://github.com/AlexanderJDupree/astra-os"

[package.metadata.bootimage]
test-timeout = 180      # Seconds to wait for test runner to complete
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",
    "-display", "none"
    ]
test-success-exit-code = 33     # (0x10 << 1) | 1

[dependencies]
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
uart_16550 = "0.2.0"
ansi_rgb = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.13.2"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
